apps/immich/ressources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: cloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: immich.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich
            port:
              number: 80
  tls:
    - hosts:
      - immich.v34l.com
      secretName: immich-secret
